# yap

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: build-macos-app.yml
install/: com.vox.dictation.plist  com.yap.dictation.plist  install.ps1  install.sh  vox.service  yap.service
packaging/: build_linux.sh  build_macos.sh  build_windows.ps1  entitlements.plist  entry.py  publish.sh  release.workflow.yml  yap.spec
tests/: test_core.py  test_learn.py  test_mac_tap.py  test_macos_safety.py
vox/: __init__.py  app.py  audio.py  cleanup.py  cli.py  config.py  hotkey.py  inject.py
vox/stt/: __init__.py  base.py  cloud_openai.py  local_whisper.py
yap/: __init__.py  app.py  audio.py  autostart.py  bundle.py  cleanup.py  cli.py  config.py  doctor.py  hardware.py  hotkey.py  inject.py  integration.py  learn.py  mac_tap.py  menubar.py  text.py  tray.py
yap/stt/: __init__.py  cloud_openai.py  local_whisper.py
